# serializer version: 1
# name: test_switch_entities[HWE-KWH1-switch.device_cloud_connection-system_set-cloud_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Cloud connection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_cloud_connection',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[HWE-KWH1-switch.device_cloud_connection-system_set-cloud_enabled].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.device_cloud_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cloud connection',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_connection',
    'unique_id': 'aabbccddeeff_cloud_connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[HWE-KWH1-switch.device_cloud_connection-system_set-cloud_enabled].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-KWH1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.06',
    'via_device_id': None,
  })
# ---
# name: test_switch_entities[HWE-KWH3-switch.device_cloud_connection-system_set-cloud_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Cloud connection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_cloud_connection',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[HWE-KWH3-switch.device_cloud_connection-system_set-cloud_enabled].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.device_cloud_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cloud connection',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_connection',
    'unique_id': 'aabbccddeeff_cloud_connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[HWE-KWH3-switch.device_cloud_connection-system_set-cloud_enabled].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-KWH3',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.06',
    'via_device_id': None,
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device-state_set-power_on]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'outlet',
      'friendly_name': 'Device',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device-state_set-power_on].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.OUTLET: 'outlet'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aabbccddeeff_power_on',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device-state_set-power_on].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-SKT',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.03',
    'via_device_id': None,
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device_cloud_connection-system_set-cloud_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Cloud connection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_cloud_connection',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device_cloud_connection-system_set-cloud_enabled].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.device_cloud_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cloud connection',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_connection',
    'unique_id': 'aabbccddeeff_cloud_connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device_cloud_connection-system_set-cloud_enabled].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-SKT',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.03',
    'via_device_id': None,
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device_switch_lock-state_set-switch_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Switch lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_switch_lock',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device_switch_lock-state_set-switch_lock].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.device_switch_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch lock',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'switch_lock',
    'unique_id': 'aabbccddeeff_switch_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[HWE-SKT-switch.device_switch_lock-state_set-switch_lock].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-SKT',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.03',
    'via_device_id': None,
  })
# ---
# name: test_switch_entities[SDM230-switch.device_cloud_connection-system_set-cloud_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Cloud connection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_cloud_connection',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[SDM230-switch.device_cloud_connection-system_set-cloud_enabled].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.device_cloud_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cloud connection',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_connection',
    'unique_id': 'aabbccddeeff_cloud_connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[SDM230-switch.device_cloud_connection-system_set-cloud_enabled].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'SDM230-wifi',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.06',
    'via_device_id': None,
  })
# ---
# name: test_switch_entities[SDM630-switch.device_cloud_connection-system_set-cloud_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Cloud connection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_cloud_connection',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[SDM630-switch.device_cloud_connection-system_set-cloud_enabled].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.device_cloud_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cloud connection',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_connection',
    'unique_id': 'aabbccddeeff_cloud_connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[SDM630-switch.device_cloud_connection-system_set-cloud_enabled].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'SDM630-wifi',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '3.06',
    'via_device_id': None,
  })
# ---
